# Alchemy

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Pipfile  README.md  autobuild.xml  build.sh  requirements.txt
.github/ISSUE_TEMPLATE/: 10-bug.yaml  20-enhancement.md  20-enhancement.yaml  config.yml
.github/workflows/: build.yaml
.gitlab/: .gitlab-webide.yml
.gitlab/issue_templates/: Bug.md  Improvement.md  New Feature.md
doc/: contributions.txt  supporters.txt
indra/: CMakeLists.txt  edit-me-to-trigger-new-build.txt  fix-incredibuild.py
indra/cmake/: 00-Common.cmake  APR.cmake  Abseil.cmake  Audio.cmake  Boost.cmake  BuildPackagesInfo.cmake  BuildVersion.cmake  CEFPlugin.cmake  CMakeLists.txt  CURL.cmake  Copy3rdPartyLibs.cmake  CubemapToEquirectangularJS.cmake  DiscordSDK.cmake  EXPAT.cmake  Epoxy.cmake  FMODEX.cmake  FMODSTUDIO.cmake  Fonts.cmake  FreeType.cmake  GLEXT.cmake  GLM.cmake  GLOD.cmake  GStreamer010Plugin.cmake  Hunspell.cmake  ICU4C.cmake  JPEG.cmake  JPEGEncoderBasic.cmake  LLAddBuildTest.cmake  LLAudio.cmake  LLCommon.cmake  LLFileSystem.cmake  LLKDU.cmake  LLPhysicsExtensions.cmake  LLPrimitive.cmake  LLRender.cmake  LLSharedLibs.cmake  LLTestCommand.cmake  LLWindow.cmake  LibVLCPlugin.cmake  LibXML2.cmake  (+33 more)
indra/copy_win_scripts/: start-client.py
indra/doxygen/: CMakeLists.txt  Doxyfile.in
indra/linux_crash_logger/: CMakeLists.txt  llcrashloggerlinux.cpp
indra/llappearance/: CMakeLists.txt  llavatarappearance.cpp  llavatarappearance.h  llavatarappearancedefines.cpp  llavatarappearancedefines.h  llavatarjoint.cpp  llavatarjoint.h  llavatarjointmesh.cpp  lldriverparam.cpp  lldriverparam.h  llpolymesh.cpp  llpolymesh.h  llpolymorph.cpp  llpolymorph.h  llpolyskeletaldistortion.cpp  llpolyskeletaldistortion.h  lltexglobalcolor.cpp  lltexglobalcolor.h  lltexlayer.cpp  lltexlayer.h  lltexlayerparams.cpp  lltexlayerparams.h  lltexturemanagerbridge.h  llviewervisualparam.cpp  llviewervisualparam.h  llwearable.cpp  llwearable.h  llwearabledata.cpp  llwearabledata.h  llwearabletype.cpp  llwearabletype.h
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmodstudio.cpp  llaudioengine_fmodstudio.h  llaudioengine_openal.cpp  llaudioengine_openal.h  lllistener.cpp  lllistener.h  lllistener_fmodstudio.cpp  lllistener_fmodstudio.h  lllistener_openal.cpp  lllistener_openal.h  llstreamingaudio.h  llstreamingaudio_fmodstudio.cpp  llstreamingaudio_fmodstudio.h  llvorbisencode.h  llwindgen.h
indra/llcharacter/: CMakeLists.txt  llanimationstates.cpp  llanimationstates.h  llbvhconsts.h  llbvhloader.cpp  llcharacter.cpp  llcharacter.h  lleditingmotion.cpp  lleditingmotion.h  llgesture.cpp  llgesture.h  llhandmotion.cpp  llhandmotion.h  llheadrotmotion.cpp  llheadrotmotion.h  lljoint.cpp  lljoint.h  lljointsolverrp3.cpp  lljointsolverrp3.h  lljointstate.h  llkeyframefallmotion.cpp  llkeyframefallmotion.h  llkeyframemotion.cpp  llkeyframemotion.h  llkeyframemotionparam.h  llkeyframestandmotion.cpp  llkeyframestandmotion.h  llkeyframewalkmotion.cpp  llkeyframewalkmotion.h  llmotion.cpp  llmotion.h  llmotioncontroller.cpp  llmotioncontroller.h  llmultigesture.cpp  llmultigesture.h  llpose.cpp  llpose.h  llstatemachine.cpp  llstatemachine.h  lltargetingmotion.cpp  (+3 more)
indra/llcommon/: CMakeLists.txt  StackWalker.cpp  StackWalker.h  alxxh.cpp  alxxh.h  classic_callback.h  compile_time.h  indra_constants.h  is_approx_equal_fraction.h  linden_common.h  llallocator_heap_profile.cpp  llallocator_heap_profile.h  llapp.cpp  llapp.h  llapr.cpp  llapr.h  llassettype.cpp  llassettype.h  llatomic.h  llbase64.cpp  llbase64.h  llbitpack.h  llcallbacklist.cpp  llcallbacklist.h  llcallstack.cpp  llcallstack.h  llcommon.cpp  llcond.h  llcoros.cpp  llcoros.h  llcurrencywrapper.cpp  llcurrencywrapper.h  lldate.cpp  lldate.h  lldeadmantimer.h  lldependencies.h  lldictionary.h  lldoubledispatch.h  llerror.cpp  llerror.h  (+132 more)
indra/llcommon/tests/: commonmisc_test.cpp  llallocator_heap_profile_test.cpp  llbase64_test.cpp  llerror_test.cpp  lleventdispatcher_test.cpp  llinstancetracker_test.cpp  llleap_test.cpp  llmainthreadtask_test.cpp  llpounceable_test.cpp  llprocess_test.cpp  llsdserialize_test.cpp  llstreamqueue_test.cpp  lltreeiterators_test.cpp  lluuid_test.cpp  stringize_test.cpp  wrapllerrs.h
indra/llcorehttp/: CMakeLists.txt  _httplibcurl.cpp  (+46 more)
indra/llkdu/: CMakeLists.txt  llimagej2ckdu.cpp  llimagej2ckdu.h  llkdumem.h
indra/llkdu/tests/: llimagej2ckdu_test.cpp
indra/llplugin/: CMakeLists.txt  llpluginclassmedia.cpp  llpluginclassmedia.h  llpluginclassmediaowner.h  llplugininstance.cpp  llplugininstance.h  llpluginmessage.cpp  llpluginmessage.h  llpluginmessagepipe.cpp  llpluginprocesschild.cpp  llpluginprocessparent.cpp  llpluginprocessparent.h  llpluginsharedmemory.cpp
indra/llplugin/slplugin/: CMakeLists.txt  slplugin-objc.h  slplugin-objc.mm  slplugin.cpp  slplugin_info.plist
indra/llrender/: CMakeLists.txt  llatmosphere.cpp  llatmosphere.h  llcubemap.cpp  llcubemap.h  llcubemaparray.cpp  llfontbitmapcache.cpp  llfontbitmapcache.h  llfontfreetype.cpp  llfontfreetype.h  llfontgl.cpp  llfontgl.h  llfontregistry.cpp  llfontregistry.h  llgl.cpp  llgl.h  llgldbg.cpp  llglheaders.h  llglslshader.cpp  llglslshader.h  llglstates.h  llgltexture.cpp  llgltexture.h  llimagegl.cpp  llimagegl.h  llpostprocess.cpp  llpostprocess.h  llrender.cpp  llrender.h  llrender2dutils.cpp  llrender2dutils.h  llrendertarget.cpp  llrendertarget.h  llshadermgr.cpp  llshadermgr.h  lltexture.cpp  lltexture.h  lltexturemanagerbridge.h  lluiimage.cpp  llvertexbuffer.cpp  (+1 more)
indra/llxml/: CMakeLists.txt  llcontrol.cpp  llcontrol.h  llcontrolgroupreader.h  llxmlnode.cpp  llxmlnode.h  llxmlparser.h  llxmltree.cpp  llxmltree.h
indra/media_plugins/base/: CMakeLists.txt  media_plugin_base.cpp  media_plugin_base.exp
indra/media_plugins/cef/: CMakeLists.txt  linux_volume_catcher.cpp  media_plugin_cef.cpp  windows_volume_catcher.cpp
scripts/: packages-formatter.py  template_verifier.py
(+2839 files in other folders)
